crates/cli/tests/snapshots/deactivate_test__deactivate__teardown_only_if_not_activated-10.snap
---
source: crates/cli/tests/deactivate_test.rs
expression: "get_deactivate_output(&assert, &sandbox)"
---
if (Get-Variable -Name 'proto_activate_on_chdir' -Scope Global -ErrorAction Ignore) {
  $ExecutionContext.SessionState.InvokeCommand.LocationChangedAction = [System.Delegate]::Remove(
    $ExecutionContext.SessionState.InvokeCommand.LocationChangedAction,
    $global:proto_activate_on_chdir
  );
  Remove-Variable -Name 'proto_activate_on_chdir' -Scope Global;
}

if (Get-Variable -Name 'proto_activate_on_prompt' -Scope Global -ErrorAction Ignore) {
  Set-Item -Path 'function:global:prompt' -Value $global:proto_activate_on_prompt;
  Remove-Variable -Name 'proto_activate_on_prompt' -Scope Global;
}
Remove-Item -LiteralPath 'function:proto_activate' -ErrorAction Ignore;
Remove-Item -LiteralPath 'function:proto_deactivate' -ErrorAction Ignore;
