crates/cli/tests/snapshots/deactivate_test__deactivate__teardown_only_if_not_activated-12.snap
---
source: crates/cli/tests/deactivate_test.rs
expression: "get_deactivate_output(&assert, &sandbox)"
---
# A comprehension rather than a loop, so that the names it walks do not outlive
# it in the shell's namespace
[
    event.discard(handler)
    for event in (events.on_chdir, events.on_pre_prompt)
    for handler in list(event)
    if getattr(handler, '__name__', '') == 'proto_activate'
]
__xonsh__.ctx.pop('proto_activate', None)
__xonsh__.ctx.pop('proto_deactivate', None)
