crates/cli/tests/snapshots/deactivate_test__deactivate__teardown_only_if_not_activated-13.snap
---
source: crates/cli/tests/deactivate_test.rs
expression: "get_deactivate_output(&assert, &sandbox)"
---
chpwd_functions=(${chpwd_functions:#proto_activate})
precmd_functions=(${precmd_functions:#proto_activate})
unset -f proto_activate;
unset -f proto_deactivate;
