crates/cli/tests/snapshots/deactivate_test__deactivate__teardown_only_if_not_activated-2.snap
---
source: crates/cli/tests/deactivate_test.rs
expression: "get_deactivate_output(&assert, &sandbox)"
---
if [[ "$(declare -p PROMPT_COMMAND 2>&1)" == "declare -a"* ]]; then
  proto_activate_filtered=();
  for proto_activate_entry in "${PROMPT_COMMAND[@]}"; do
    if [[ "$proto_activate_entry" != "proto_activate" ]]; then
      proto_activate_filtered+=("$proto_activate_entry");
    fi
  done
  PROMPT_COMMAND=("${proto_activate_filtered[@]}");
  unset proto_activate_filtered proto_activate_entry;
else
  PROMPT_COMMAND=";${PROMPT_COMMAND:-};";
  PROMPT_COMMAND="${PROMPT_COMMAND//;proto_activate;/;}";
  PROMPT_COMMAND="${PROMPT_COMMAND#;}";
  PROMPT_COMMAND="${PROMPT_COMMAND%;}";
fi
unset -f proto_activate;
unset -f proto_deactivate;
