crates/cli/tests/snapshots/deactivate_test__deactivate__teardown_only_if_not_activated-5.snap
---
source: crates/cli/tests/deactivate_test.rs
expression: "get_deactivate_output(&assert, &sandbox)"
---
# Erasing the wrapper unbinds both events with it
functions --erase proto_activate_on_context;
functions --erase proto_activate;
functions --erase proto_deactivate;
