crates/cli/tests/snapshots/deactivate_test__deactivate__teardown_only_if_not_activated-6.snap
---
source: crates/cli/tests/deactivate_test.rs
expression: "get_deactivate_output(&assert, &sandbox)"
---
Error: shell::no_hook_support

  × Your shell, ion, does not support "unregister handlers" hooks. Please
  │ remove the command from your shell that is triggering this hook.
