crates/cli/tests/snapshots/deactivate_test__deactivate__teardown_only_if_not_activated-7.snap
---
source: crates/cli/tests/deactivate_test.rs
expression: "get_deactivate_output(&assert, &sandbox)"
---
!event onPrompt proto_activate_on_prompt
!function proto_activate;
!function proto_deactivate;
